<resources>
    <string name="app_name">InsuranceApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="title_activity_private_insurance">PrivateInsurance</string>
    <string name="privateCarInsurance">Private Car Insurance</string>
    <string name="privateMotorcycleInsurance">Private Motorcycle Insurance</string>
    <string name="personalAccidentInsurance">Personal Accident Insurance</string>
    <string name="travelInsurance">Travel Insurance</string>
    <string name="title_activity_jhlkjh">jhlkjh</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="date_of_birth" color="black">Date of Birth</string>
    <string name="male">Male</string>
    <string name="gender" color="black">Gender</string>
    <string name="upload">Upload</string>
    <string name="select">Select</string>
    <string name="female">Female</string>
    <string name="period" color="black">Period</string>
    <string name="annual">Annual</string>
    <string name="semi_annual">Semi-annual</string>
    <string name="height">Height</string>
    <string name="name">Name</string>
    <string name="fname">First Name</string>
    <string name="first_name">First Name</string>
    <string name="mpesa">M-PESA</string>
    <string name="save">save</string>
    <string name="mastercard">Master Card</string>

    <!--Terms and Conditions Template String-->
    <string name="tnc">

        What is Lorem Ipsum?

        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.

        Why do we use it?

        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using, making it look like readable English.
        Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy.
        Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).

        Where does it come from?

        Contrary to popular belief, Lorem Ipsum is not simply random text.
        It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
        Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
        Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC.
        This book is a treatise on the theory of ethics, very popular during the Renaissance.
        The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
    </string>
</resources>
