<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingEnd="@dimen/fab_margin"
        android:paddingStart="@dimen/fab_margin">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="mng.r.lydia.insuranceapp.PersonalAccidentPage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/textView51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginStart="26dp"
                android:text="Date Of Birth" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_marginTop="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/editText35"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="26dp"
                android:layout_marginStart="26dp"
                android:inputType="textPersonName"
                android:hint="First Name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/editText36"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="26dp"
                android:layout_marginStart="26dp"
                android:inputType="textPersonName"
                android:hint="Last Name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/editText52"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="26dp"
                android:layout_marginStart="26dp"
                android:hint="Height"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="26dp"
            >
            <TextView
                android:id="@+id/textView50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Complete Medical History Questionnaire " />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload"
                    android:layout_weight="1"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="26dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"/>

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButton15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView46"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/period"/>
                <RadioButton
                    android:id="@+id/radioButton16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/annual" />

                <RadioButton
                    android:id="@+id/radioButton17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semi_annual"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="26dp">
            <TextView
                android:id="@+id/textView49"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Chose Limit of Cover required either:"/>

            <RadioButton
                android:id="@+id/radioButton18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView49"
                android:layout_alignStart="@+id/textView49"
                android:layout_below="@+id/textView49"
                android:layout_marginTop="18dp"
                android:text="DIAMOND" />

            <RadioButton
                android:id="@+id/radioButton19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PLATINUM"
                android:layout_alignBaseline="@+id/radioButton18"
                android:layout_alignBottom="@+id/radioButton18"
                android:layout_toRightOf="@+id/radioButton18"
                android:layout_toEndOf="@+id/radioButton18" />

            <RadioButton
                android:id="@+id/radioButton20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/radioButton19"
                android:layout_toEndOf="@+id/radioButton19"
                android:layout_toRightOf="@+id/radioButton19"
                android:text="GOLD" />

            <RadioButton
                android:id="@+id/radioButton21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/radioButton18"
                android:layout_alignStart="@+id/radioButton18"
                android:layout_below="@+id/radioButton18"
                android:text="SILVER" />

            <RadioButton
                android:id="@+id/radioButton22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton19"
                android:layout_toEndOf="@+id/radioButton18"
                android:layout_toRightOf="@+id/radioButton18"
                android:text="BRONZE" />

            <RadioButton
                android:id="@+id/radioButton23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FEDHA"
                android:layout_below="@+id/radioButton20"
                android:layout_toRightOf="@+id/radioButton22"
                android:layout_toEndOf="@+id/radioButton22" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>